CSS changes to Chat Window

--- a/CSS/chatWindow.css
+++ b/CSS/chatWindow.css
@@ -1,22 +1,66 @@
 body{
     text-align: center;
+    background:radial-gradient(circle at 28% 29%, rgba(237, 237, 237,0.04) 0%, rgba(237, 237, 237,0.04) 50%,rgba(136, 136, 136,0.04) 50%, rgba(136, 136, 136,0.04) 100%),radial-gradient(circle at 8% 78%, rgba(156, 156, 156,0.04) 0%, rgba(156, 156, 156,0.04) 50%,rgba(37, 37, 37,0.04) 50%, rgba(37, 37, 37,0.04) 100%),radial-gradient(circle at 29% 46%, rgba(251, 251, 251,0.04) 0%, rgba(251, 251, 251,0.04) 50%,rgba(198, 198, 198,0.04) 50%, rgba(198, 198, 198,0.04) 100%),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255));
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
+
+#searchBar{
+    width: 500px;
+    height: 25px;
+    border:1px solid black;
+    border-radius: 10px;
+    padding:10px 10px;
+    transition: all 0.4s;
+}
+
+#searchBar:focus{
+    outline:none;
+    border:3px solid rgba(87,184,70, 0.8);
+}
+
+#searchBar:hover{
+    border:3px solid rgba(87,184,70, 0.8);
+}
+
 #chatMessage{
     margin-top: 5px;
     margin-bottom: 5px;
     height: 500px;
     width: auto;
     overflow: scroll;
-    border-style: solid;
-    border-width: 1px;
+    border:2px solid rgba(87,184,70, 0.8);
 }
+
 #message{
     width: 500px;
     height: 25px;
     overflow: scroll;
+    border:1px solid black;
+    border-radius:10px;
+    padding:10px 10px;
+    transition: all 0.4s;
 }
-#searchBar{
-    width: 500px;
-    height: 25px;
+#message:focus{
+    outline:none;
+    border:3px solid rgba(87,184,70, 0.8);
+}
 
+#message:hover{
+    border:3px solid rgba(87,184,70, 0.8);
+}
+
+#sendButton{
+    background-color:rgba(87,184,70, 0.8);
+    border:none;
+    width:60px;
+    height:35px;
+    margin:10px 10px;
+    padding:0px 10px;
+    border-radius:10px;
+    color:white;
+    transition: all 0.4s;
+}
+
+#sendButton:hover{
+    background-color:#333333;
 }
